--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,3 +32,10 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 flutter:
   uses-material-design: true
+  assets:
+    - assets/animations/empty.json
+    - assets/animations/loading.json
+    - assets/animations/data_not_found.json
+    - assets/animations/error.json
+    - assets/animations/small_error.json
+
